--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
   主页</h3>
 
   <p class="webIndex">
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
+    <a href="../ttpsc/website/compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
     <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">官方插件系统</a>
     <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
     <a href="https://www.gamekee.com/theotown/" target="_blank" rel="noopener noreferrer">GAMEKEE</a>
     <a href="https://pd.qq.com/s/fu3snsucp" target="_blank" rel="noopener noreferrer">QQ频道</a>
-    <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
-    <a href="https://sioneo.github.io/ttpsc/website/submit.html" target="_self">向我们投稿!</a>
+    <a href="../ttpsc/website/submit.html" target="_self">向我们投稿!</a>
   </p>
   
   <h2 class="pageTitle">欢迎访问西奥小镇插件系统中文站!</h2>
   <p class="pageText">你好！欢迎访问本站！本站致力于为国内插件创作者们打造一个舒适的资源平台，希望你能喜欢。</p>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 13:14进行了最后一次更新&emsp;
+    本页于2024/12/01 00:12进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
