--- a/website/introduction.html
+++ b/website/introduction.html
@@ -9,12 +9,12 @@
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>
+    <a href="compass.html" target="_self" class="backButton">返回索引页</a>
   插件简介</h3>
 
   <p class="webIndex">
     相关页面：
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
+    <a href="compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
     <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">官方插件系统</a>
     <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
