--- a/website/compass.html
+++ b/website/compass.html
@@ -9,31 +9,30 @@
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-     <a href="https://sioneo.github.io/ttpsc/" target="_self" class="backButton">返回主页</a>  
+     <a href="../index.html" target="_self" class="backButton">返回主页</a>  
   索引页</h3>
 
   <p class="webIndex">
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
+    <a href="compass.html" target="_self">索引页</a>
     <a href="https://forum.theotown.com" target="_blank" rel="noopener noreferrer">西奥小镇论坛</a>
     <a href="https://pca.svetikas.lt/docs/" target="_blank" rel="noopener noreferrer">官方插件系统</a>
     <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
     <a href="https://www.gamekee.com/theotown/" target="_blank" rel="noopener noreferrer">GAMEKEE</a>
     <a href="https://pd.qq.com/s/fu3snsucp" target="_blank" rel="noopener noreferrer">QQ频道</a>
-    <a href="https://www.bilibili.com" target="_self">关于我们&帮助</a>
-    <a href="https://sioneo.github.io/ttpsc/website/submit.html" target="_self">向我们投稿!</a>
+    <a href="submit.html" target="_self">向我们投稿!</a>
   </p>
 
   <h2 class="pageTitle">索引页</h2>
   <p class="pageText">你可以在此进入本站的各模块。<br><br></p>
 
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/introduction.html" target="_self">简介</a></h3>
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/PluginManifest.html" target="_self">插件清单文件(plugin.manifest)</a></h3>
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/compass.html" target="_self">教程</a></h3>
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/resource/compass.html" target="_self">资源</a></h3>
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/other/compass.html" target="_self">其它</a></h3>
+  <h3 class="pageIndexLink"><a href="introduction.html" target="_self">简介</a></h3>
+  <h3 class="pageIndexLink"><a href="PluginManifest.html" target="_self">插件清单文件(plugin.manifest)</a></h3>
+  <h3 class="pageIndexLink"><a href="../website/tutorial/compass.html" target="_self">教程</a></h3>
+  <h3 class="pageIndexLink"><a href="../website/resource/compass.html" target="_self">资源</a></h3>
+  <h3 class="pageIndexLink"><a href="../website/other/compass.html" target="_self">其它</a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 13:06进行最后一次更新&emsp;
+    本页于2024/12/01 00:20进行最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
