--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -9,15 +9,15 @@
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-     <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>  
+     <a href="compass.html" target="_self" class="backButton">返回索引页</a>  
   插件清单文件</h3>
 
   <p class="webIndex">
     相关页面：
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
+    <a href="compass.html" target="_self">索引页</a>
     <a href="https://pca.svetikas.lt/docs/manifest/" target="_blank" rel="noopener noreferrer">官方插件系统原文</a>
     <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">插件制作网站</a>
-    <a href="https://sioneo.github.io/ttpsc/website/tutorial/BasicJson.html" target="_self">JSON基础内容</a>
+    <a href="../website/tutorial/BasicJson.html" target="_self">JSON基础内容</a>
   </p>
 
   <h2 class="pageTitle">插件清单文件（plugin.manifest）</h2>
