--- a/website/tutorial/compass.html
+++ b/website/tutorial/compass.html
@@ -3,27 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>教程 - 西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="https://sioneo.github.io/ttpsc/style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-     <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>  
+     <a href="../compass.html" target="_self" class="backButton">返回索引页</a>  
   教程</h3>
 
   <h2 class="pageTitle">教程</h2>
   <p class="pageText">你可以在此进入各教程的页面。<br><br></p>
 
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/BasicJson.html" target="_self">
+  <h3 class="pageIndexLink"><a href="BasicJson.html" target="_self">
     JSON基础内容
   </a></h3>
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/tutorial/SimplePlugin.html" target="_self">
+  <h3 class="pageIndexLink"><a href="SimplePlugin.html" target="_self">
     从0开始做一个简单的插件
   </a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 18:05进行最后一次更新&emsp;
+    本页于2024/12/01 00:23进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
