--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>基础JSON内容 - 西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="https://sioneo.github.io/ttpsc/style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-     <a href="https://sioneo.github.io/ttpsc/website/tutorial/compass.html" target="_self" class="backButton">返回教程页</a>  
+     <a href="https://compass.html" target="_self" class="backButton">返回教程页</a>  
   基础JSON内容</h3>
 
   <p class="webIndex">
     相关页面：
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">索引页</a>
+    <a href="../compass.html" target="_self">索引页</a>
     <a href="https://pca.svetikas.lt/docs/attribute-types/base/" target="_blank" rel="noopener noreferrer">官方插件系统原文</a>
   </p>
 
@@ -69,7 +69,7 @@
   <p class="code">{<br>  "array": ["TheoTown", "西奥小镇"],<br>  "object": {"en": "TheoTown, "zh": "西奥小镇"}<br>}</p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 20:58进行了最后一次更新&emsp;
+    本页于2024/12/01 00:29进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
