--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -9,7 +9,7 @@
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-     <a href="https://compass.html" target="_self" class="backButton">返回教程页</a>  
+     <a href="compass.html" target="_self" class="backButton">返回教程页</a>  
   基础JSON内容</h3>
 
   <p class="webIndex">
@@ -69,7 +69,7 @@
   <p class="code">{<br>  "array": ["TheoTown", "西奥小镇"],<br>  "object": {"en": "TheoTown, "zh": "西奥小镇"}<br>}</p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 00:29进行了最后一次更新&emsp;
+    本页于2024/12/01 00:31进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
