--- a/website/resource/compass.html
+++ b/website/resource/compass.html
@@ -3,27 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>资源 - 西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="https://sioneo.github.io/ttpsc/style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-     <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>  
+     <a href="../compass.html" target="_self" class="backButton">返回索引页</a>  
   资源</h3>
 
   <h2 class="pageTitle">资源</h2>
   <p class="pageText">你可以在此进入各资源的页面。<br><br></p>
 
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/resource/AllKeys.html" target="_self">
+  <h3 class="pageIndexLink"><a href="AllKeys.html" target="_self">
     JSON属性（键）大全
   </a></h3>
-  <h3 class="pageIndexLink"><a href="https://sioneo.github.io/ttpsc/website/resource/WorldTexture.html" target="_self">
+  <h3 class="pageIndexLink"><a href="WorldTexture.html" target="_self">
     世界贴图(World texture)
   </a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 19:39进行最后一次更新&emsp;
+    本页于2024/12/01 00:34进行最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
