--- a/website/other/compass.html
+++ b/website/other/compass.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>其它 - 西奥小镇插件系统中文站</title>
-  <link rel="stylesheet" type="text/css" href="https://sioneo.github.io/ttpsc/style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
   <h1 class="webTitle">西奥小镇插件系统中文站</h1>
 
   <h3 class="pageNow">
-     <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self" class="backButton">返回索引页</a>  
+     <a href="../compass.html" target="_self" class="backButton">返回索引页</a>  
   其它</h3>
 
   <h2 class="pageTitle">其它</h2>
   <p class="pageText">你可以在此进入一些其它内容的页面。<br><br></p>
   <p class="pageText">暂无内容。
-    <a href="https://sioneo.github.io/ttpsc/website/compass.html" target="_self">
+    <a href="../compass.html" target="_self">
     返回索引页</a>
   </p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/11/30 19:43进行最后一次更新&emsp;
+    本页于2024/12/01 00:34进行最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
