--- a/website/PluginManifest.html
+++ b/website/PluginManifest.html
@@ -84,7 +84,7 @@
   <p class="pageText">类型：字符串<br>插件的标题。</p> 
 
   <h4 class="pageTitle3" style="font-weight: bold"><br>url</h4>
-  <p class="pageText">类型：字符串/布尔值false<br>可以下载到插件的链接，填写false则为不提供。</p> 
+  <p class="pageText">类型：字符串<br>可以下载插件的链接。</p> 
   <p class="noteTitle">最低版本要求：1.8.16</p>
   <p class="note">此内容（url）需要最低1.8.16的游戏版本才能使用。</p>
 
@@ -93,8 +93,8 @@
   
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 00:24进行了最后一次更新&emsp;
-    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
+    本页于2024/12/01 10:18进行了最后一次更新&emsp;
+    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>on Bilibili.
   </p>
 
 </body>
