--- a/website/tutorial/BasicJson.html
+++ b/website/tutorial/BasicJson.html
@@ -66,11 +66,11 @@
   <h4 class="pageTitle3"><br>对象（Object）</h4>
   <p class="pageText">对象用于存储属性。与数组相比，对象包含完整的一个或多个键值对，而数组只包含值。</p>
   <p class="codeTitle">例子</p>
-  <p class="code">{<br>  "array": ["TheoTown", "西奥小镇"],<br>  "object": {"en": "TheoTown, "zh": "西奥小镇"}<br>}</p>
+  <p class="code">{<br>  "array": ["TheoTown", "西奥小镇"],<br>  "object": {"en": "TheoTown", "zh": "西奥小镇"}<br>}</p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 00:31进行了最后一次更新&emsp;
-    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
+    本页于2024/12/01 10:20进行了最后一次更新&emsp;
+    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>on Bilibili.
   </p>
 
 </body>
