--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   <p class="pageText">你好！欢迎访问本站！本站致力于为国内插件创作者们打造一个舒适的资源平台，希望你能喜欢。</p>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 00:12进行了最后一次更新&emsp;
-    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
+    <a href="LISENCE" target="_blank" rel="noopener noreferrer">本站使用MIT许可证</a>&emsp;
+    本页于2024/12/01 13:07进行了最后一次更新&emsp;
+    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>on Bilibili.
   </p>
 
 </body>
