--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p class="pageText">你好！欢迎访问本站！本站致力于为国内插件创作者们打造一个舒适的资源平台，希望你能喜欢。</p>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    <a href="LICENSE" target="_blank" rel="noopener noreferrer">本站使用MIT许可证</a>&emsp;
+    <a href="ShowLicense.html" target="_blank" rel="noopener noreferrer">本站使用MIT许可证</a>&emsp;
     本页于2024/12/01 13:07进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>on Bilibili.
   </p>
