--- a/ShowLicense.html
+++ b/ShowLicense.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <h1>MIT License</h1>
-            <p>Copyright (c) 2024 Sioneo <a href="mailto:tpswebsite@outlook.com">E-mail</a> <a href="profile">https://github.com/Sioneo</a>, <a href="profile">https://b23.tv/Y9QZi0v</a></p>
-        <p>Permission is hereby granted, free of charge, to any person obtaining a copy
+            <p>Copyright (c) 2024 Sioneo Email: tpswebsite@outlook.com"
+            &nbsp;<a href="https://github.com/Sioneo" target="_blank" rel="rel="noopener noreferrer">Github Profile</a>,
+            &nbsp;<a href="https://b23.tv/Y9QZi0v" target="_blank" rel="noopener noreferrer">Bilibili</a>
+            </p>
+         <p>Permission is hereby granted, free of charge, to any person obtaining a copy
             of this software and associated documentation files (the "Software"), to deal
             in the Software without restriction, including without limitation the rights
             to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
