--- a/ShowLicense.html
+++ b/ShowLicense.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h1>MIT License</h1>
-            <p>Copyright (c) 2024 Sioneo Email: tpswebsite@outlook.com"
+            <p>Copyright (c) 2024 Sioneo Email: tpswebsite@outlook.com
             &nbsp;<a href="https://github.com/Sioneo" target="_blank" rel="rel="noopener noreferrer">Github Profile</a>,
-            &nbsp;<a href="https://b23.tv/Y9QZi0v" target="_blank" rel="noopener noreferrer">Bilibili</a>
+            &nbsp;<a href="https://b23.tv/Y9QZi0v" target="_blank" rel="noopener noreferrer">Bilibili Profile</a>
             </p>
          <p>Permission is hereby granted, free of charge, to any person obtaining a copy
             of this software and associated documentation files (the "Software"), to deal
