--- a/ShowLicense.html
+++ b/ShowLicense.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>许可证 - 西奥小镇插件系统中文站</title>
+    <title>MIT许可证 - 西奥小镇插件系统中文站</title>
 </head>
 <body>
   <h1>MIT License</h1>
-            <p>Copyright (c) 2024 Sioneo, Email: tpswebsite@outlook.com
+            <p>Copyright (c) 2024 Sioneo, Email: ttpscwebsite@outlook.com
             &nbsp;<a href="https://github.com/Sioneo" target="_blank" rel="rel="noopener noreferrer">Github Profile</a>,
             &nbsp;<a href="https://b23.tv/Y9QZi0v" target="_blank" rel="noopener noreferrer">Bilibili Profile</a>
             </p>
