--- a/website/tutorial/compass.html
+++ b/website/tutorial/compass.html
@@ -14,7 +14,10 @@
 
   <h2 class="pageTitle">教程</h2>
   <p class="pageText">你可以在此进入各教程的页面。<br><br></p>
-
+  
+  <h3 class="pageIndexLink"><a href="Copyright.html" target="_self">
+    著作权（版权）
+  </a></h3>
   <h3 class="pageIndexLink"><a href="BasicJson.html" target="_self">
     JSON基础内容
   </a></h3>
@@ -23,7 +26,7 @@
   </a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 00:23进行了最后一次更新&emsp;
+    本页于2024/12/01 17:15进行了最后一次更新&emsp;
     Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
   </p>
 
