更新 Copyright.html

--- a/website/tutorial/Copyright.html
+++ b/website/tutorial/Copyright.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>著作权 - 西奥小镇插件系统中文站</title>
+  <title>著作权（版权） - 西奥小镇插件系统中文站</title>
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 
   <h3 class="pageNow">
      <a href="compass.html" target="_self" class="backButton">返回教程页</a>  
-  著作权</h3>
+  著作权（版权）</h3>
 
   <p class="webIndex">
     相关页面：
@@ -19,13 +19,13 @@
 
   <h2 class="pageTitle">著作权（版权/Copyright）</h2>
   <p class="pageText">
-    本页基于<a class="link" href="https://www.gov.cn/guoqing/2021-10/29/content_5647633.htm" target="_blank" rel="noopener noreferrer">中华人民共和国著作权法</a>
-    和<a class="link" href="https://forum.theotown.com/viewtopic.php?t=4144" target="_blank" rel="noopener noreferrer">西奥小镇论坛上关于著作权贴子</a>编写。<br>
+    本页基于 <a class="link" href="https://www.gov.cn/guoqing/2021-10/29/content_5647633.htm" target="_blank" rel="noopener noreferrer">中华人民共和国著作权法</a>
+    和 <a class="link" href="https://forum.theotown.com/viewtopic.php?t=4144" target="_blank" rel="noopener noreferrer">西奥小镇论坛上关于版权的贴子</a>编写。<br>
   </p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 17:20进行了最后一次更新&emsp;
-    版权所有 © 2024 Bilibili用户 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>。
+    本页于2024/12/01 17:22进行了最后一次更新&emsp;
+    版权所有 © 2024 Bilibili用户<a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>
   </p>
 
 </body>
