--- a/website/tutorial/Copyright.html
+++ b/website/tutorial/Copyright.html
@@ -23,8 +23,33 @@
     和 <a class="link" href="https://forum.theotown.com/viewtopic.php?t=4144" target="_blank" rel="noopener noreferrer">西奥小镇论坛上关于版权的贴子</a>编写。<br>
   </p>
   
+  <p class="warningTitle">警告！</p>
+  <p class="warning">
+    本文不一定完全正确，请仅将本文作为参考，并以 
+    <a class="link" href="https://www.gov.cn/guoqing/2021-10/29/content_5647633.htm" target="_blank" rel="noopener noreferrer">中华人民共和国著作权法</a>
+    相关规定及实际情况下该遵守的规定为标准。
+  </p>
+  
+  <h3 class="pageSubTitle">什么是著作权？</h3>
+  <p class="pageText">&nbsp;&nbsp;著作权，也称版权，是一种法律保护，它赋予创作者对其创作作品的一系列专有权利。
+    著作权的主要目的是保护创作者的智力（劳动）成果，同时也保护作品不被未经授权的使用或复制。对于创作者创作的原创作品来说，不论是否发表，均享有著作权。
+    <br>“作品”是指文学、艺术和科学领域内具有独创性并能以一定形式表现的智力成果，包括：
+    <br><ul>
+      <li>（一）文字作品；</li>
+      <li>（二）口述作品；</li>
+      <li>（三）音乐、戏剧、曲艺、舞蹈、杂技艺术作品；</li>
+      <li>（四）美术、建筑作品；</li>
+      <li>（五）摄影作品；</li>
+      <li>（六）视听作品；</li>
+      <li>（七）工程设计图、产品设计图、地图、示意图等图形作品和模型作品；</li>
+      <li>（八）计算机软件；</li>
+      <li>（九）符合作品特征的其他智力成果。</li>
+    </ul>
+  </p>
+
+  
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 17:22进行了最后一次更新&emsp;
+    本页于2024/12/01 18:02进行了最后一次更新&emsp;
     版权所有 © 2024 Bilibili用户<a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>
   </p>
 
