--- a/website/tutorial/Copyright.html
+++ b/website/tutorial/Copyright.html
@@ -32,9 +32,9 @@
   
   <h3 class="pageSubTitle">什么是著作权？</h3>
   <p class="pageText">&nbsp;&nbsp;著作权，也称版权，是一种法律保护，它赋予创作者对其创作作品的一系列专有权利。
-    著作权的主要目的是保护创作者的智力（劳动）成果，同时也保护作品不被未经授权的使用或复制。对于创作者创作的原创作品来说，不论是否发表，均享有著作权。
-    <br>“作品”是指文学、艺术和科学领域内具有独创性并能以一定形式表现的智力成果，包括：
-    <br><ul>
+    著作权的主要目的是保护创作者的智力（劳动）成果，同时也保护作品不被未经授权的使用或复制。对于创作者创作的原创作品来说，不论是否发表，均享有著作权。<br>
+    “作品”是指文学、艺术和科学领域内具有独创性并能以一定形式表现的智力成果，包括：
+    <br><ul class="pageText">
       <li>（一）文字作品；</li>
       <li>（二）口述作品；</li>
       <li>（三）音乐、戏剧、曲艺、舞蹈、杂技艺术作品；</li>
