--- a/website/resource/compass.html
+++ b/website/resource/compass.html
@@ -13,18 +13,14 @@
   资源</h3>
 
   <h2 class="pageTitle">资源</h2>
-  <p class="pageText">你可以在此进入各资源的页面。<br><br></p>
+  <p class="pageText">你可以在此找到一些资源。<br><br></p>
 
-  <h3 class="pageIndexLink"><a href="AllKeys.html" target="_self">
-    JSON属性（键）大全
-  </a></h3>
   <h3 class="pageIndexLink"><a href="WorldTexture.html" target="_self">
     世界贴图(World texture)
   </a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 00:34进行最后一次更新&emsp;
-    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
+    本页于2024/12/01 00:34进行了最后一次更新
   </p>
 
 </body>
