更新 WorldTexture.html

--- a/website/resource/WorldTexture.html
+++ b/website/resource/WorldTexture.html
@@ -1,1 +1,27 @@
 <!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8">
+  <title>世界纹理 - 西奥小镇插件系统中文站</title>
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+  <h1 class="webTitle">西奥小镇插件系统中文站</h1>
+
+  <h3 class="pageNow">
+     <a href="../compass.html" target="_self" class="backButton">返回索引页</a>  
+  世界纹理</h3>
+
+  <h2 class="pageTitle">世界纹理（World Texture)</h2>
+  <p class="pageText">游戏中自带建筑和一些元素使用的贴图。</p>
+  <p class="pageText"><br>十分抱歉，为了避免一些可能的问题，请前往
+    <a href="https://forum.theotown.com/viewtopic.php?t=5659" target="_blank" class="link">西奥小镇论坛</a>或
+    <a href="https://pca.svetikas.lt/docs/resources/world-texture/" target="_blank" class="link">官方插件系统</a>下载。
+
+
+  <p style="text-align: center; background-color: #505050; font-size: 13px;">
+    本页于2024/12/01 20:19进行了最后一次更新
+  </p>
+
+</body>
+</html>
