更新 compass.html

--- a/website/resource/compass.html
+++ b/website/resource/compass.html
@@ -16,11 +16,11 @@
   <p class="pageText">你可以在此找到一些资源。<br><br></p>
 
   <h3 class="pageIndexLink"><a href="WorldTexture.html" target="_self">
-    世界贴图(World texture)
+    世界纹理(World texture)
   </a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 00:34进行了最后一次更新
+    本页于2024/12/01 20:20进行了最后一次更新
   </p>
 
 </body>
