更新 Copyright.html

--- a/website/tutorial/Copyright.html
+++ b/website/tutorial/Copyright.html
@@ -14,27 +14,25 @@
 
   <p class="webIndex">
     相关页面：
-    <a href="https://www.gov.cn/guoqing/2021-10/29/content_5647633.htm" target="_blank" rel="noopener noreferrer">中华人民共和国著作权法</a>
+    <a href="https://forum.theotown.com/viewtopic.php?t=4144" target="_blank" rel="noopener noreferrer">论坛上关于版权的贴子</a>
   </p>
 
-  <h2 class="pageTitle">著作权（版权/Copyright）</h2>
+  <h2 class="pageTitle">版权（Copyright）</h2>
   <p class="pageText">
-    本页基于 <a class="link" href="https://www.gov.cn/guoqing/2021-10/29/content_5647633.htm" target="_blank" rel="noopener noreferrer">中华人民共和国著作权法</a>
-    和 <a class="link" href="https://forum.theotown.com/viewtopic.php?t=4144" target="_blank" rel="noopener noreferrer">西奥小镇论坛上关于版权的贴子</a>编写。<br>
+    本页基于<a class="link" href="https://forum.theotown.com/viewtopic.php?t=4144" target="_blank" rel="noopener noreferrer">西奥小镇论坛上关于版权的贴子</a>编写。<br>
   </p>
   
-  <p class="warningTitle">警告！</p>
+  <p class="warningTitle">请注意</p>
   <p class="warning">
-    本文不一定完全正确，请仅将本文作为参考，并以 
-    <a class="link" href="https://www.gov.cn/guoqing/2021-10/29/content_5647633.htm" target="_blank" rel="noopener noreferrer">中华人民共和国著作权法</a>
-    相关规定及实际情况下该遵守的规定为标准。
+    本文不一定完全正确，请仅将本文作为参考。
   </p>
   
-  <h3 class="pageSubTitle">什么是著作权？</h3>
-  <p class="pageText">&nbsp;&nbsp;著作权，也称版权，是一种法律保护，它赋予创作者对其创作作品的一系列专有权利。
-    著作权的主要目的是保护创作者的智力（劳动）成果，同时也保护作品不被未经授权的使用或复制。对于创作者创作的原创作品来说，不论是否发表，均享有著作权。<br>
-    “作品”是指文学、艺术和科学领域内具有独创性并能以一定形式表现的智力成果，包括：
-    <br><ul class="pageText">
+  <h3 class="pageSubTitle">什么是版权？</h3>
+  <p class="pageText">版权是对作者原创作品的保护，所有原创作品在被创造之后即拥有版权。</p>
+  
+  <h3 class="pageSubTitle">版权适用于？</h3>
+  <p class="pageText">版权适用于很多东西，例如：<br>
+    <ul class="pageText">
       <li>（一）文字作品；</li>
       <li>（二）口述作品；</li>
       <li>（三）音乐、戏剧、曲艺、舞蹈、杂技艺术作品；</li>
@@ -43,14 +41,28 @@
       <li>（六）视听作品；</li>
       <li>（七）工程设计图、产品设计图、地图、示意图等图形作品和模型作品；</li>
       <li>（八）计算机软件；</li>
-      <li>（九）符合作品特征的其他智力成果。</li>
+      <li>（九）其他。</li>
     </ul>
+    <br>包括你现在阅读的这篇文章，这个网站都受版权的保护。
   </p>
-
+  
+  <h3 class="pageSubTitle">该如何避免侵权？</h3>
+  <p class="pageText">
+     <ul class="pageText">
+      <li>（一）首先，最简单的方法就是在插件创作中使用自己的原创贴图。</li>
+      <li>（二）如果你在网上或者某个地方发现有自己想要使用的图像，你应该先检查图像是否有使用许可、声明等，如果没有，请联系原作者并取得许可后再使用。</li>
+     </ul>
+  </p>
+    
+  <h3 class="pageSubTitle">关于世界贴图（World Texture）</h3>
+  <p class="pageText">世界贴图中包含了西奥小镇原版游戏中非IAP（应用内购买/In app purchases）贴图，插件创作者们可以在
+    声明贴图来源的前提下自由使用。<br>
+    关于声明，我通常这样写：<text class="mono">Credits: Lobby & Theotheoderich.</text>，但你也可以使用你的方式，能表达到意思即可。
+  </p>
   
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 18:02进行了最后一次更新&emsp;
-    版权所有 © 2024 Bilibili用户<a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a>
+    本页于2024/12/08 16:56进行了最后一次更新&emsp;
+    本文由Bilibili用户<a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer"> Sioneo </a>编写。
   </p>
 
 </body>
