更新 Copyright.html

--- a/website/tutorial/Copyright.html
+++ b/website/tutorial/Copyright.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>著作权（版权） - 西奥小镇插件系统中文站</title>
+  <title>版权 - 西奥小镇插件系统中文站</title>
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 
   <h3 class="pageNow">
      <a href="compass.html" target="_self" class="backButton">返回教程页</a>  
-  著作权（版权）</h3>
+  版权</h3>
 
   <p class="webIndex">
     相关页面：
