更新 Copyright.html

--- a/website/tutorial/Copyright.html
+++ b/website/tutorial/Copyright.html
@@ -43,10 +43,10 @@
       <li>（八）计算机软件；</li>
       <li>（九）其他。</li>
     </ul>
-    <br>包括你现在阅读的这篇文章，这个网站都受版权的保护。
+    <br><text class="pageText">包括你现在阅读的这篇文章，这个网站都受版权的保护。</text>
   </p>
   
-  <h3 class="pageSubTitle">该如何避免侵权？</h3>
+  <h3 class="pageSubTitle"><br>该如何避免侵权？</h3>
   <p class="pageText">
      <ul class="pageText">
       <li>（一）首先，最简单的方法就是在插件创作中使用自己的原创贴图。</li>
@@ -54,7 +54,7 @@
      </ul>
   </p>
     
-  <h3 class="pageSubTitle">关于世界贴图（World Texture）</h3>
+  <h3 class="pageSubTitle"><br>关于世界贴图（World Texture）</h3>
   <p class="pageText">世界贴图中包含了西奥小镇原版游戏中非IAP（应用内购买/In app purchases）贴图，插件创作者们可以在
     声明贴图来源的前提下自由使用。<br>
     关于声明，我通常这样写：<text class="mono">Credits: Lobby & Theotheoderich.</text>，但你也可以使用你的方式，能表达到意思即可。
