更新 compass.html

--- a/website/tutorial/compass.html
+++ b/website/tutorial/compass.html
@@ -16,7 +16,7 @@
   <p class="pageText">你可以在此进入各教程的页面。<br><br></p>
   
   <h3 class="pageIndexLink"><a href="Copyright.html" target="_self">
-    著作权（版权）
+    版权
   </a></h3>
   <h3 class="pageIndexLink"><a href="BasicJson.html" target="_self">
     JSON基础内容
@@ -24,10 +24,13 @@
   <h3 class="pageIndexLink"><a href="SimplePlugin.html" target="_self">
     从0开始做一个简单的插件
   </a></h3>
+  <h3 class="pageIndexLink"><a href="NightAnimation.html" target="_self">
+    夜景（夜间动画）
+  </a></h3>
 
   <p style="text-align: center; background-color: #505050; font-size: 13px;">
-    本页于2024/12/01 17:15进行了最后一次更新&emsp;
-    Copyright © 2024 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>on Bilibili.
+    本页于2024/12/08 17:01进行了最后一次更新&emsp;
+    网站作者：Bilibili用户 <a href="https://b23.tv/VVKamoK" target="_blank">Sioneo</a>。
   </p>
 
 </body>
