--- a/website/tutorial/SimplePlugin.html
+++ b/website/tutorial/SimplePlugin.html
@@ -1,1 +1,52 @@
 <!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8">
+  <title>从0开始制作一个简单的插件 - 西奥小镇插件系统中文站</title>
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+  <h1 class="webTitle">西奥小镇插件系统中文站</h1>
+
+  <h3 class="pageNow">
+     <a href="compass.html" target="_self" class="backButton">返回教程页</a>  
+  从0开始制作一个简单的插件</h3>
+
+  <p class="webIndex">
+    相关页面：
+    <a href="https://b23.tv/X5jzvfI" target="_blank" rel="noopener noreferrer">视频教程</a>
+    <a href="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">代码制作网站</a>
+  </p>
+
+  <h2 class="pageTitle">从0开始制作一个简单的插件</h2>
+  <p class="pageText">插件在西奥小镇游戏中扮演了重要的角色，极大的丰富了游戏的内容，创造了无限可能。关于制作插件，其实并不难，简单的插件包含贴图和JSON代码，更高级的还包含Lua代码，着色器中使用GLSL着色器语言。本文主要介绍贴图制作和代码。</p>
+
+  <hr>
+  <h3 class="pageSubTitle">视频教程</h3>
+  <p class="pageText">为了避免可能的问题，本站并不提供图片资源，因此，你可以通过Bilibili视频来更好地理解。这里提供一个在Bilibili上的视频教程</p>
+  <a class="link" herf="https://b23.tv/X5jzvfI" target="_blank" rel="noopener noreferrer">【西奥小镇】如何制作一个插件（1×1小住宅）</a>
+  
+  <br><hr>
+  <h3 class="pageSubTitle">贴图</h3>
+  <p class="pageText">要制作贴图，首先你需要绘图软件，国内比较多人使用 <text class="mono">Pixel Studio</text>，你可以在应用商店搜索或加入一些群聊来下载它，一些绘画软件也是不错的选择。</p>
+  <p class="pageText"><br>紧接着呢你还需要下载一个建筑基座，用于绘图，你可以前往论坛下载，下载时最好打开图片再下载喔：<a class="link" herf="https://forum.theotown.com/viewtopic.php?t=3207" target="_blank" rel="noopener noreferrer">点击此处跳转</a></p>
+  <p class="pageText"><br>关于绘制建筑，你可以观看上面的视频来获取一些灵感，或浏览这篇论坛文章来获取更多灵感：<a class="link" herf="https://forum.theotown.com/viewtopic.php?t=25943" target="_blank" rel="noopener noreferrer">点击此处跳转</a></p>
+
+  <br><hr>
+  <h3 class="pageSubTitle">代码</h3>
+  <p class="pageText">关于代码，开发者JustAnyone提供了一个插件代码制作网站（<a class="link" herf="https://pca.svetikas.lt/" target="_blank" rel="noopener noreferrer">点击此处跳转</a>），你可以借助这个网站快速制作代码。</p>
+
+  <p class="pageText"><br>当然，你也可以看这里的教程。首先你还是需要一个JSON编辑器，不过对于安卓和桌面端平台我并不清楚什么软件比较好，但对于iOS平台，你可以使用 <text class="mono">Koder</text> 软件。</p>
+
+  <p class="pageText"><br>在一切准备好之后，我们开始编写吧！那么这里我先提供一个例子/模板：</p>
+  <p class="codeText">例子</p>
+  <p class="code">[<br>  {<br>    "id": "$Example",<br>    "type": "type",<br>    "title": "标题",<br>    "text": "描述",<br>    "frames": [{"bmp": "image.png"}],<br>    "height": 1,<br>    "width": 1<br>  }<br>]</p>
+  <p class="pageText">那么好，这就是一个最基础的代码模版，下面我会对其中的内容一一讲解。</p>
+  
+  <p style="text-align: center; background-color: #505050; font-size: 13px;">
+    本页于2024/12/14 12:16进行了最后一次更新&emsp;
+    本文由Bilibili用户 <a href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">Sioneo</a> 编写。
+  </p>
+
+</body>
+</html>
