--- a/website/submit.html
+++ b/website/submit.html
@@ -37,11 +37,11 @@
   </p>
   <p class="pageText">
     在Bilibili向我发送私信(请先在任意一条视频/动态发一条评论告诉我你要投稿): 
-    <a class="link" href="https://b23.tv/VVKamoK" target="_blank">点击此处
+    <a class="link" href="https://b23.tv/VVKamoK" target="_blank" rel="noopener noreferrer">点击此处
     </a>
   </p>
-  <p class="pageText">向我发送电子邮件: ttpscwebsite@outlook.com</p>
-  <p class="pageText">本站Github仓库: <a class="link" href="https://github.com/Sioneo/ttpsc" target="_blank">点击此处
+  <p class="pageText">向我发送电子邮件: lindotheotown@outlook.com</p>
+  <p class="pageText">本站Github仓库: <a class="link" href="https://github.com/Sioneo/ttpsc" target="_blank" rel="noopener noreferrer">点击此处
   </a></p>
 
 
